# JETFinalProject

./: .env  .gitignore  README.md  main.py  requirements.txt  setup.py
JETFinalProject.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
audio/: listener.py  transcriber.py
face/: facial_recog.py
face/face_database/: faces.pkl
llm/: query_engine.py
ros_pkg/: package.xml  setup.py
ros_pkg/launch/: multimodal.launch.py
ros_pkg/ros_pkg/: facial_recognition_node.py  listener_node.py  llm_node.py  vision_node.py
test/: test_vision.py
utils/: drawing.py
vision/: depth_estimator.py  hand_tracker.py  object_detector.py  test.py
